# blocks

./: .gitignore  .gitmodules  CMakeLists.txt  blocks.desktop  montage.sh  refactors  windowsresource.rc
cmake/modules/: CMakeASM-NASMInformation.cmake  CMakeDetermineASM-NASMCompiler.cmake  FindGimGui.cmake  Findangelscript.cmake
data/: attributes.json  bindings.json  entities.json  frag  vert
data/entities/: attributes.att  attributes.json  elephant.def  entities.ent  entities.json  pallkars.def  player.def  poring.def
data/scripts/: elephant.as  entity.as  general.as  hills.as  loglevel.as  pallkars.as  player.as  poring.as  testextension.as  testextension1.as  testextension2.as  trees.as  world.as
data/textures/: blocks.xcf
data/worlds/: default.json
docs/: blocks.conf
expbiomes/: CMakeLists.txt
expbiomes/src/: biome.hpp  biomestorage.cpp  biomestorage.hpp  generator.cpp  generator.hpp  interpolator.cpp  interpolator.hpp  main.cpp  mapchunk.cpp  mapchunk.hpp  texturemaker.hpp
include/json/: json.hpp  json_reader.hpp  json_value.hpp
profile/world/: modmanagerprofile.cpp
src/: LocalChunkDeliverer.h  MemoryPool.cpp  MemoryPool.hpp  blocksapp.cpp  blocksapp.h  blockstd.h  camera.cpp  chunk.cpp  chunk.h  chunkdeliverer.h  chunkgenerator.cpp  chunkgenerator.h  chunkloadedpackage.cpp  chunkloadedpackage.h  chunkprovider.h  chunkvbo.cpp  chunkvbo.h  client.cpp  client.h  defaultsetters.cpp  dimension.cpp  dimension.h  entityfactory.cpp  entityfactory.h  entitysystem.cpp  entitysystem.h  focuspoint.h  gameinterface.cpp  gameinterface.hpp  gfxentityaddedpackage.cpp  gfxentityaddedpackage.h  gfxentitymovedpackage.cpp  gfxentitymovedpackage.h  landscape.cpp  landscape.h  localchunkdeliverer.cpp  localchunkdeliverer.h  localchunkprovider.cpp  localchunkprovider.h  localserverclientbridge.cpp  (+37 more)
src/application/: applicationmessages.h  applicationmessages.hpp  blocksapp.cpp  blocksapp.h  blocksapp.hpp  client.cpp  client.h  client.hpp  main.cpp  server.cpp  server.h  server.hpp
src/client/: clientchunkhandler.cpp  clientchunkhandler.hpp  clientmessages.hpp  clientworld.cpp  clientworld.hpp
src/console/: console.cpp  console.h  console.hpp  consolecolor.h  consolecolor.hpp  keys.hpp
src/controllers/: collisioncontroller.cpp  collisioncontroller.h  entitycontroller.cpp  entitycontroller.h  gfxcontroller.cpp  gfxcontroller.h  physicscontroller.cpp  physicscontroller.h  playercontroller.cpp  playercontroller.h
src/entity/: defaultsetters.cpp  defaultsetters.h  defaultsetters.hpp  entitycreator.h  entitycreator.hpp  entitydefinition.h  entitydefinition.hpp  entitydefinitionloader.cpp  entitydefinitionloader.h  entitydefinitionloader.hpp  entityfactory.cpp  entityfactory.h  entityfactory.hpp  entitymessages.h  entitymessages.hpp  entitysystem.cpp  entitysystem.h  entitysystem.hpp  playermessages.hpp
src/input/: inputactions.h  inputactions.hpp  inputadaptor.cpp  inputadaptor.h  inputadaptor.hpp  inputmessages.h  inputmessages.hpp
src/json/: json.h  json_reader.h  json_value.h  json_writer.h  json_writer.hpp
src/math/: mathutils.cpp  mathutils.h  mathutils.hpp
src/networking/: channels.hpp  chunkrequesthandler.cpp  chunkrequesthandler.hpp  clientconnection.cpp  clientconnection.h  clientconnection.hpp  clientconnectionlistener.cpp  clientconnectionlistener.h  clientconnectionlistener.hpp  clientnetworkingsystem.cpp  clientnetworkingsystem.hpp  enet.cpp  enet.hpp  enetclient.cpp  enetclient.hpp  enetserver.cpp  enetserver.hpp  listener.cpp  listener.hpp  localclientconnectionlistener.cpp  localclientconnectionlistener.h  localclientconnectionlistener.hpp  localclientlistener.cpp  localclientlistener.hpp  localserverclientbridge.cpp  localserverclientbridge.h  localserverclientbridge.hpp  messageserializer.cpp  messageserializer.hpp  networkingmessages.hpp  networkingprotocol.cpp  networkingprotocol.hpp  networkparameters.hpp  networkstd.hpp  package.cpp  package.h  package.hpp  packages.h  packages.hpp  packagetype.h  (+19 more)
src/physics/: physicstypes.h
src/rendering/: animation.hpp  animationshader.cpp  animationshader.hpp  baseshader.cpp  billboard.cpp  billboard.h  billboard.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.h  camera.hpp  chunkgeneratorqueue.cpp  chunkgeneratorqueue.h  chunkgeneratorqueue.hpp  chunkmodel.hpp  chunkmodelcreator.cpp  chunkmodelcreator.hpp  debugrenderable.cpp  debugrenderable.hpp  debugrenderer.cpp  debugrenderer.h  debugrenderer.hpp  extrarenderable.cpp  extrarenderable.hpp  extrarenderer.cpp  extrarenderer.hpp  frustum.cpp  frustum.h  frustum.hpp  gl_core_3_2.c  gl_core_3_2.h  glcontext.cpp  glcontext.hpp  guirenderable.cpp  guirenderable.hpp  guirenderer.cpp  guirenderer.hpp  marchingcubegenerator.cpp  marchingcubegenerator.h  (+61 more)
src/resources/: attributefromfileloader.cpp  attributefromfileloader.hpp  clientresourcesystem.cpp  clientresourcesystem.hpp  entityfromfileloader.cpp  entityfromfileloader.hpp  extensionmetadata.cpp  extensionmetadata.hpp  extensionmetadatafromfileloader.cpp  extensionmetadatafromfileloader.hpp  fontfromfileloader.cpp  fontfromfileloader.hpp  gfxentitydefinition.hpp  gfxentitydefinitionfromfileloader.cpp  gfxentitydefinitionfromfileloader.hpp  image.cpp  image.hpp  imagefromfileloader.cpp  imagefromfileloader.hpp  iqmfromfileloader.cpp  iqmfromfileloader.hpp  rawmodel.hpp  resourcecache.hpp  resourceentry.hpp  resourceexception.cpp  resourceexception.hpp  resourcemessages.hpp  resourcepathtoname.cpp  resourcepathtoname.hpp  resourcesystem.cpp  resourcesystem.hpp  shaderdefinition.hpp  shaderdefinitionfromfileloader.cpp  shaderdefinitionfromfileloader.hpp  shadersource.hpp  shadersourcefromfileloader.cpp  shadersourcefromfileloader.hpp  texture.cpp  texture.hpp  texturedefinition.hpp  (+5 more)
src/script/: scriptcallback.cpp  scriptcallback.h  scriptcallback.hpp  scriptchunk.cpp  scriptchunk.hpp  scriptengine.cpp  scriptengine.h  scriptengine.hpp  scriptentity.cpp  scriptentity.h  scriptstd.h  (+17 more)
test/: scopeddirectory.cpp  scopeddirectory.hpp  testhelpers.cpp  testhelpers.hpp
tools/: iqm_export.py
yasm/: yasm-linux64
(+313 files in other folders)
